<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true"
              tools:context=".DatabaseActivity">

    <RelativeLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent" android:layout_height="@dimen/dimen_56dp">


        <TextView
                android:textSize="@dimen/text_toolbar"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </RelativeLayout>

    <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">


        <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_centerInParent="true"/>


    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
            android:layout_marginTop="@dimen/dimen_15dp"
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


</LinearLayout>