<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".DatabaseActivity">

    <RelativeLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent" android:layout_height="@dimen/dimen_56dp">

        <ImageView
                android:padding="@dimen/dimen_12dp"
                android:id="@+id/iv_back"
                android:scaleType="centerInside"
                android:src="@drawable/back_arrow"
                android:layout_width="@dimen/dimen_56dp"
                android:layout_height="@dimen/dimen_56dp"/>

        <TextView
                android:textSize="@dimen/text_toolbar"
                android:text="@string/update_activity"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </RelativeLayout>

    <TextView
            android:textSize="@dimen/text_medium"
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Username : "
            android:textColor="@color/black"/>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/et_password22"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">

        <View android:layout_width="@dimen/dimen_0dp" android:layout_height="@dimen/dimen_5dp"
              android:layout_weight="1"/>


        <Button
                android:id="@+id/button_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_centerInParent="true"/>

        <View android:layout_width="@dimen/dimen_0dp" android:layout_height="@dimen/dimen_5dp"
              android:layout_weight="1"/>

        <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_centerInParent="true"/>

        <View android:layout_width="@dimen/dimen_0dp" android:layout_height="@dimen/dimen_5dp"
              android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>